--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,30 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden;
+    width: 100%;
+    max-width: 100vw;
+}
+
+.container, .container-fluid {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+.row {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Rajdhani', sans-serif;
     background-color: #0a0a0a;
     color: #ffffff;
     line-height: 1.6;
     overflow-x: hidden;
+    width: 100%;
+    max-width: 100vw;
 }
 
 /* Custom Scrollbar */
@@ -181,7 +199,7 @@ h1, h2, h3, h4, h5, h6 {
 .hero-content {
     z-index: 2;
     position: relative;
-    padding: 20px 0;
+    padding: 60px 0 20px 0;
     width: 100%;
     box-sizing: border-box;
 }
@@ -1243,7 +1261,7 @@ h1, h2, h3, h4, h5, h6 {
     }
     
     .hero-content {
-        padding: 20px 10px;
+        padding: 50px 10px 20px 10px;
         text-align: center;
     }
     
@@ -1348,7 +1366,7 @@ h1, h2, h3, h4, h5, h6 {
     }
     
     .hero-content {
-        padding: 15px 5px;
+        padding: 40px 5px 15px 5px;
         text-align: center;
     }
     
@@ -1476,7 +1494,7 @@ h1, h2, h3, h4, h5, h6 {
     }
     
     .hero-content {
-        padding: 10px 0;
+        padding: 30px 0 10px 0;
         width: 100%;
         max-width: 100%;
     }
@@ -1532,8 +1550,8 @@ h1, h2, h3, h4, h5, h6 {
     }
     
     .row {
-        margin-left: -5px;
-        margin-right: -5px;
+        margin-left: 0;
+        margin-right: 0;
     }
     
     .col-lg-6 {
